# ddd-test-assignment

./: .env.example  Dockerfile  Makefile  pyproject.toml
app/application/api/: main.py
app/domain/entities/: activities.py  base.py  buildings.py  organizations.py
app/domain/exceptions/: activities.py  base.py  buildings.py  organizations.py
app/domain/values/: activities.py  base.py  buildings.py  organizations.py
app/settings/: config.py  constants.py
docker-compose/: app.yaml  storage.yaml
tests/domain/values/: test_activities.py  test_buidings.py  test_organizations.py
